# Metal

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  clang-format-all  vcpkg.json
.github/workflows/: cmake-single-platform.yml
MetalExamples.xcodeproj/: project.pbxproj
MetalExamples.xcodeproj/xcshareddata/xcschemes/: Triangle macOS.xcscheme  Triangle tvOS.xcscheme
assets/models/: CesiumManFixed.glb  CesiumManFixedOriginal.glb
assets/textures/: 001_basecolor.ktx  002_basecolor.ktx  003_basecolor.ktx  004_basecolor.ktx  005_basecolor.ktx
cmake/: CompileShaders.cmake  FetchExternal.cmake
examples/: CMakeLists.txt  Info.plist.in
examples/base/: CMakeLists.txt  Camera.h  Camera.hpp  Camera.mm  Example.h  Example.mm  SDL_uikit_main.c  camera.h  camera.mm  camera_c.mm  camera_x.cpp  camera_x.h  example.h  example.mm  example_macos.mm  graphics_math.h  keys.h  platform.h  simd_matrix.h
examples/coretext/: CMakeLists.txt  main.mm  text.mm
examples/gltf/: CMakeLists.txt  CesiumMan.gltf  Model.h  Model.mm  SimpleSkin.gltf  gltf.mm  model.h  model.mm  shader.metal  single_bone.gltf
examples/instancing/: CMakeLists.txt  instancing.cpp  instancing.mm  shader.metal  simple.metallib
examples/spritefont/: Arial.fnt  CMakeLists.txt  SpriteBatch.h  SpriteBatch.mm  SpriteFont.h  SpriteFont.mm  main.mm  shader.metal
examples/texture/: CMakeLists.txt  Info.plist.in  shader.metal  texture.mm
examples/triangle/: CMakeLists.txt  Example.mm  LaunchScreen.storyboard  main.mm  shader.metal  triangle.cpp  triangle.mm
examples/triangle/iOS/: Info.plist.in  Main.xib
examples/triangle/macOS/: ExampleViewController.h  Info.plist.in
shaders/instancing/: shader.metal
shaders/ogex/: shader.metal
shaders/skinning/: shader.metal
shaders/textures/: shader.metal
shaders/triangle/: shader.metal
source/: CMakeLists.txt
source/base/: CMakeLists.txt  Camera.cpp  Camera.h  Camera.hpp  Camera.mm  Example.cpp  Example.hpp  File.cpp  File.hpp  FileUtil.cpp  FileUtil.hpp  GameTimer.cpp  GameTimer.hpp  Gamepad.cpp  Gamepad.hpp  GraphicsMath.h  GraphicsMath.hpp  Keyboard.cpp  Keyboard.hpp  LinkImpl.cpp  Mouse.cpp  Mouse.hpp  ScreenUtils.hpp  ScreenUtils.mm  SimpleMath.cpp  SimpleMath.h  TextureUtil.cpp  TextureUtil.hpp  imgui_impl_metal.mm  imgui_impl_sdl2.cpp  sal.h
source/distancefieldfont/: CMakeLists.txt  Info.plist.in  main.cpp
source/helloworld/: CMakeLists.txt  Info.plist.in  helloworld.cpp  main.cpp
source/instancing/: CMakeLists.txt  Info.plist.in  instancing.cpp  main.cpp
source/ogex/: CMakeLists.txt  Cube.ogex  Monkey.ogex  main.cpp
source/skinning/: CMakeLists.txt  GLTFAsset.cpp  GLTFAsset.hpp  Info.plist.in  Model.cpp  Model.hpp  StaticGeometry.hpp  alien-bug.glb  main.cpp
source/skinning/iOS/: LaunchScreen.storyboard
source/spritebatching/: CMakeLists.txt  SpriteBatch.cpp  SpriteBatch.hpp  main.cpp
source/textures/: CMakeLists.txt  main.cpp
source/triangle/: CMakeLists.txt  Example.h  Info.plist.in  main.mm  shader.metal  triangle.cpp
source/triangle/iOS/: AppDelegate.h  AppDelegate.m  ExampleViewController.h  ExampleViewController.m  Launch Screen.storyboard  Main.storyboard
source/triangle/macOS/: AppDelegate.h  AppDelegate.m  Application.xib  ExampleViewController.m
